--- a/Editor/_FedoraDev.PointOfInterest.Editor.asmdef
+++ b/Editor/_FedoraDev.PointOfInterest.Editor.asmdef
@@ -1,11 +1,13 @@
 {
-    "name": "_FedoraDev.PointOfInterest.Implementations",
-    "rootNamespace": "FedoraDev.PointOfInterest.Implementations",
+    "name": "_FedoraDev.PointOfInterest.Editor",
+    "rootNamespace": "FedoraDev.PointOfInterest.Editor",
     "references": [
         "GUID:82c66337bf5c4a949874dfc1140583d7",
-        "GUID:08a0cd0bce6471041b2b8e4e19a506ee"
+        "GUID:8fa23d61b37309248a150453bb52963d"
     ],
-    "includePlatforms": [],
+    "includePlatforms": [
+        "Editor"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
